--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,32 @@
 version: '3.8'
 
 services:
-  # 1. Flaskアプリケーション (web)
+  nginx:
+    image: nginx:1.25-alpine
+    container_name: rehab_app_nginx
+    ports:
+      # ブラウザからのアクセス(5000番)をNginxが受け取る
+      - "5000:80"
+    volumes:
+      # 作成した設定ファイルを読み込ませる
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      # CSSファイルなどをNginxが読めるように共有する
+      - ./app/web/static:/usr/share/nginx/html/static:ro
+    depends_on:
+      - web
+    networks:
+      - rehabnet
+      
+  # Flaskアプリケーション (web)
   web:
     build: . # カレントディレクトリのDockerfileを使用
     container_name: rehab_app_web
     user: root
-    ports:
-      # [ローカルPCのポート]:[コンテナ内のポート]
-      - "5000:8080" # http://localhost:5000 でアクセス可能に
+    expose:            # Docker内部でのみ8080番を開放
+      - "8080"
+    # ports:
+    #   # [ローカルPCのポート]:[コンテナ内のポート]
+    #   - "5000:8080" # http://localhost:5000 でアクセス可能に
     env_file:
       - .env # .envファイルから環境変数を読み込む
     volumes:
