--- a/requirementsGPU.txt
+++ b/requirementsGPU.txt
@@ -37,6 +37,7 @@ filelock==3.19.1
 filetype==1.2.0
 Flask==3.1.1
 Flask-Login==0.6.3
+Flask-WTF
 flatbuffers==25.2.10
 frozenlist==1.7.0
 fsspec==2024.12.0
